--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,11 +1,1 @@
-description: "My exploration of tools for image processing and analysis."
-collections:
-- notebooks
-- r
-- fiji
-notebooks:
-  output: true
-r:
-  output: true
-fiji:
-  output: true
+description: "My exploration of Fiji macros."
